Added some changes

--- a/index.html
+++ b/index.html
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Profile</title>
-</head>
-<body>
-    <header>
-        <nav>
+       <nav>
             <p>Portfolio.</p>
             <ul>
                 <li>Home</li>
@@ -20,12 +11,12 @@
     </header>
 
     <main>
-        <Section>
+        <section>
             <h2>My Bio</h2>
             <p>
                 Hello, I am Ogbonna Obinna, a software developer with focus on development of web applications. I have a degree in Chemistry (Industrial Chemistry option) from Federal University of Technology, Owerri and have about 2 years Frontend Development experience. My work is driven by my passion for web development and I believe in excellence and perfection. Connect with me to learn more about my professional journey.
             </p>
-            <img src="./img/pix.png" alt="">
+            <img src="./img/pix.png" alt="bio image">
 
             <h3>My Hobbies</h3>
             <ol>
@@ -34,7 +25,7 @@
                 <li>Designing and Coding</li>
                 <li>Playing football</li>
             </ol>
-        </Section>
+        </section>
     </main>
 
     <footer>
@@ -49,9 +40,11 @@
 
         <div>
             <h2>Contact Us</h2>
-            <label>Full Name:</label> <input type="text" placeholder="Full Name">
-            <label>Email Address:</label> <input type="text" placeholder="Email Address">
-            <label>Social Media Handle:</label> <input type="text" placeholder="Your social media handle">
+            <div>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/b/be/Facebook_Messenger_logo_2020.svg" alt="facebook messanger logo">
+                <img src="https://en.m.wikipedia.org/wiki/File:Instagram_logo_2022.svg" alt="instagram logo">
+                <img src="https://www.freepik.com/free-vector/new-2023-twitter-logo-x-icon-design_57642948.htm#fromView=keyword&page=1&position=0&uuid=55910fe5-2769-4756-a8cc-0819ef632da1&query=X+Logo" alt="x logo>
+            </div>
         </div>
     </footer>
 </body>
